--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "countries-flags",
-  "homepage": "https://paulsajta.github.io/countries",
+  "homepage": "https://paulsajta.github.io/countries/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -45,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
